--- a/Books-bootstrap/web/Index.html
+++ b/Books-bootstrap/web/Index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"> 
  
-  <link href="../assets/header-img.png" rel="icon" />
+  <link href="header-img.png" rel="icon" />
 </head>
 
 <body>
@@ -65,7 +65,7 @@
           </button>
         </div>
         <div class="col-md-5 col-sm-12  h-25">
-          <img src="../assets/header-img.png" alt="Book" />
+          <img src="header-img.png" alt="Book" />
         </div>
       </div>
     </div>
@@ -204,7 +204,7 @@
         <div class="col-md-4 col-12 text-center">
             <div class="card mr-2 d-inline-block shadow-lg">
                 <div class="card-img-top">
-                  <img src="../assets/UI-face-3.jpg" class="img-fluid border-radius p-4" alt="">
+                  <img src="UI-face-3.jpg" class="img-fluid border-radius p-4" alt="">
                 </div>
                 <div class="card-body">
                   <h3 class="card-title">Blalock Jolene</h3>
@@ -223,7 +223,7 @@
                   <div class="carousel-item active">
                     <div class="card mr-2 d-inline-block shadow">
                       <div class="card-img-top">
-                        <img src="../assets/UI-face-1.jpg" class="img-fluid rounded-circle w-50 p-4" alt="">
+                        <img src="UI-face-1.jpg" class="img-fluid rounded-circle w-50 p-4" alt="">
                       </div>
                       <div class="card-body">
                         <h3 class="card-title">Allen Agnes</h3>
@@ -239,7 +239,7 @@
                   <div class="carousel-item">
                     <div class="card  d-inline-block mr-2 shadow">
                       <div class="card-img-top">
-                        <img src="../assets/UI-face-2.jpg" class="img-fluid rounded-circle w-50 p-4" alt="">
+                        <img src="UI-face-2.jpg" class="img-fluid rounded-circle w-50 p-4" alt="">
                       </div>
                       <div class="card-body">
                         <h3 class="card-title">Amiel Barbara</h3>
@@ -258,7 +258,7 @@
         <div class="col-md-4 col-12 text-center">
             <div class="card mr-2 d-inline-block shadow-lg">
                 <div class="card-img-top">
-                  <img src="../assets/UI-face-4.jpg" class="img-fluid border-radius p-4" alt="">
+                  <img src="UI-face-4.jpg" class="img-fluid border-radius p-4" alt="">
                 </div>
                 <div class="card-body">
                   <h3 class="card-title">Olivia Louis</h3>
@@ -287,7 +287,7 @@
         <div class="col-lg-4 col-md-12 col-sm-12 pb-4">
           <h4 class="text-light">Newsletter</h4>
           <p class="text-white">Stay Updated</p>
-          <form class="form-inline">
+          <form class="form-inline " style="margin-left: 5rem;">
             <div class="col pl-0">
               <div class="input-group pr-5">
                 <input type="text" class="form-control bg-dark text-white" id="inlineFormInputGroupUsername2" placeholder="Email">
