--- a/Books-bootstrap/web/contact us.html
+++ b/Books-bootstrap/web/contact us.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Style.css" />
     <link rel="stylesheet" href="./mobile-style.css" />
     <link rel="stylesheet" href="./all.min.css" />
-    <link href="../assets/header-img.png" rel="icon" />
+    <link href="header-img.png" rel="icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -115,23 +115,24 @@
 
     <footer>
       <div class="container-fluid p-0">
-        <div class="row text-left">
-          <div class="col-md-5 col-sm-5">
+        <div class="row text-center">
+          <div class="col-lg-4 col-md-12 col-sm-12 mb-4">
             <h4 class="text-light">About us</h4>
             <p class="text-white">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum
-              maxime ea similique illum corrupti
+              Lorem ipsum dolor sit amet, consectetur<br />
+              adipisicing elit. Earum maxime ea<br />
+              similique illum corrupti
             </p>
             <p class="pt-4 text-white">
-              Copyright ©2020 All rights reserved | This template is made with
-              by
+              Copyright ©2020 All rights reserved |<br />
+              This template is made with by
               <span> Daily Tuition</span>
             </p>
           </div>
-          <div class="col-md-5 col-sm-12">
+          <div class="col-lg-4 col-md-12 col-sm-12 pb-4">
             <h4 class="text-light">Newsletter</h4>
             <p class="text-white">Stay Updated</p>
-            <form class="form-inline">
+            <form class="form-inline" style="margin-left: 5rem">
               <div class="col pl-0">
                 <div class="input-group pr-5">
                   <input
@@ -153,34 +154,34 @@
               </div>
             </form>
           </div>
-          <div class="col-md-2 col-sm-12">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <h4 class="text-light">Follow Us</h4>
             <p class="text-white">Let us be social</p>
             <div class="column text-light">
               <h5>Email</h5>
-              <li class="my-2">
+              <li class="my-2 text-white">
                 <a
                   href="https://mail.google.com/mail/u/0/"
-                  target="_blank"
+                  target="_self"
                   class="text-white"
                   >daru1787@gmail.com</a
                 >
               </li>
               <h5>Phone No</h5>
-              <li class="my-2">
+              <li class="my-2 text-dark">
                 <a
                   href="https://web.whatsapp.com/"
-                  target="_blank"
+                  target="_self"
                   class="text-white"
                   >03036569031</a
                 >
               </li>
               <!-- <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-            
-            <a href="https://web.whatsapp.com/" target="_blank"><i class="fa fa-whatsapp  " ></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
-            <a href="https://www.twitter.com" target="_blank"> <i class="fa fa-twitter"></i></a>
-            <a href="https://www.youtube.com" target="_blank"> <i class="fa fa-youtube"></i></a> -->
+              
+              <a href="https://web.whatsapp.com/" target="_blank"><i class="fa fa-whatsapp  " ></i></a>
+              <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.twitter.com" target="_blank"> <i class="fa fa-twitter"></i></a>
+              <a href="https://www.youtube.com" target="_blank"> <i class="fa fa-youtube"></i></a> -->
               <!-- WhatsApp Icon -->
               <a href="https://web.whatsapp.com/" target="_blank"
                 ><i class="fab fa-whatsapp"></i
